--- a/src/css/style.css
+++ b/src/css/style.css
@@ -554,40 +554,8 @@ video {
   display: none;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
-}
-
-.top-7 {
-  top: 1.75rem;
-}
-
-.-top-7 {
-  top: -1.75rem;
-}
-
-.-top-16 {
-  top: -16px;
-}
-
-.-top-48 {
-  top: -48px;
-}
-
-.-top-200 {
-  top: -200px;
-}
-
-.-top-160 {
-  top: -160px;
-}
-
-.-top-140 {
-  top: -140px;
 }
 
 .-top-\[100px\] {
@@ -608,8 +576,8 @@ video {
   margin-bottom: 160px;
 }
 
-.mt-160 {
-  margin-top: 160px;
+.mt-24 {
+  margin-top: 24px;
 }
 
 .mt-71 {
@@ -628,20 +596,12 @@ video {
   height: 31px;
 }
 
-.h-440 {
-  height: 440px;
-}
-
 .h-48 {
   height: 48px;
 }
 
 .h-54 {
   height: 54px;
-}
-
-.w-10\/12 {
-  width: 83.333333%;
 }
 
 .w-200 {
@@ -656,24 +616,12 @@ video {
   width: 280px;
 }
 
-.w-440 {
-  width: 440px;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .max-w-280 {
   max-width: 280px;
-}
-
-.max-w-\[680px\] {
-  max-width: 680px;
 }
 
 .grow {
@@ -686,6 +634,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 
 .items-start {
@@ -704,16 +656,8 @@ video {
   justify-content: space-between;
 }
 
-.gap-12 {
-  gap: 12px;
-}
-
 .gap-16 {
   gap: 16px;
-}
-
-.gap-168 {
-  gap: 168px;
 }
 
 .gap-24 {
@@ -734,6 +678,14 @@ video {
 
 .gap-54 {
   gap: 54px;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-16 {
@@ -779,14 +731,19 @@ video {
   padding-right: 5rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-80 {
   padding-left: 80px;
   padding-right: 80px;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-3 {
@@ -799,22 +756,9 @@ video {
   padding-bottom: 48px;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.pt-140 {
-  padding-top: 140px;
-}
-
-.pt-20 {
-  padding-top: 5rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pt-16 {
@@ -823,6 +767,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .font-OpenSans {
@@ -876,6 +824,12 @@ video {
   color: rgb(128 142 154 / var(--tw-text-opacity));
 }
 
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -883,11 +837,52 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-440 {
+    height: 440px;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
   }
 
+  .lg\:w-10\/12 {
+    width: 83.333333%;
+  }
+
+  .lg\:w-440 {
+    width: 440px;
+  }
+
+  .lg\:w-\[680px\] {
+    width: 680px;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:gap-1 {
+    gap: 0.25rem;
+  }
+
+  .lg\:gap-168 {
+    gap: 168px;
+  }
+
+  .lg\:p-20 {
+    padding: 5rem;
+  }
+
+  .lg\:p-28 {
+    padding: 7rem;
+  }
+
+  .lg\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .lg\:text-start {
+    text-align: start;
   }
 }
